# jobContextMCP

./: .coverage  .dockerignore  .env.example  .env.local.example  .env.pi.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_BUG_REPORT.md  CODEX_REFACTOR_TASK.md  Dockerfile  LICENSE  README.md  _log_stories.py  cli.py  config.example.json  copilot-instructions.example.md  debug_parser.py  desktop_main.py  docker-compose.yml  docker.config.example.json  pyproject.toml  rag.py  requirements-dev.txt  requirements.txt  run_generate.py  run_mcp.sh  server.py  sonar-project.properties  tools.json
.github/: copilot-instructions.md
.sonarlint/: connectedMode.json
data/: beta_testers.example.json  contact_crossref.example.json  contact_log.example.json  github_metrics.example.json  interviews.example.json  job_queue.example.json  linkedin_connections.example.json  linkedin_posts.example.json  mental_health_log.example.json  people.example.json  personal_context.example.json  rag_index.example.json  rejections.example.json  scan_index.example.json  status.example.json  tone_samples.example.json
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  dmg-background.tiff  dmg-settings.py  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: client-setup.md  control-plane.md  local-cluster.md  remote-mobile-architecture.md  setup-claude-desktop.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
k8s/: cert-issuer.yaml  (+6 more)
(+387 files in other folders)
